# APRG-group-projects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.run/: Run Tests.run.xml  collision-detection.run.xml  convex-hull.run.xml
collision-detection/: CMakeLists.txt  README.md
collision-detection/include/: AABB.h  BoundingVolume.h  CircularMotion.hpp  ConfigurationWindow.hpp  InformationWindow.hpp  IntersectionTestsFromBook.h  LinearMotion.hpp  Plane.h  Sphere.h  Triangle.h  VisualVector.h  app.h
collision-detection/src/: AABB.cpp  BoundingVolume.cpp  CircularMotion.cpp  ConfigurationWindow.cpp  InformationWindow.cpp  IntersectionTestsFromBook.cpp  LinearMotion.cpp  Plane.cpp  Sphere.cpp  Triangle.cpp  VisualVector.cpp  main.cpp
convex-hull/: CMakeLists.txt  README.md
convex-hull/include/: DataGenerator.h  DivideAndConquer.h  JarvisMarch.h  QuickHull.h  TextWindow.h  VisualAlgorithm.h  app.h  eiconfig.hpp
convex-hull/src/: DataGenerator.cpp  DivideAndConquer.cpp  JarvisMarch.cpp  QuickHull.cpp  TextWindow.cpp  VisualAlgorithm.cpp  main.cpp
convex-hull/test/: run_tests.ps1  test_data_generator.py
docs/: GUIDE-Development-Setup-SDL2.md  GUIDE-Development-Setup-SFML.md
game-of-life/: .gitignore  CMakeLists.txt  README.md  run_game-of-life.ps1  run_game-of-life.py  run_script.ps1
game-of-life/expected/: small1_out.gol
game-of-life/include/: game_of_life.h  game_of_life.hpp  gui.hpp
game-of-life/input/: big1_in.gol  medium1_in.gol  small1_in.gol
game-of-life/src/: game_of_life.cpp  gui.cpp  main.cpp
game-of-life/test/: test_game_of_life.cpp  test_game_of_life_files.cpp  test_game_of_life_logic.cpp
hidoku-puzzle/: CMakeLists.txt
hidoku-puzzle/expected/: 001_solution.txt  002_solution.txt  003_solution.txt  004_solution.txt  005_solution.txt  006_solution.txt  007_solution.txt  008_solution.txt  009_solution.txt  010_solution.txt  011_solution.txt  012_solution.txt  013_solution.txt  014_solution.txt  015_solution.txt  016_solution.txt  017_solution.txt  018_solution.txt  019_solution.txt  020_solution.txt  021_solution.txt  022_solution.txt  023_solution.txt  024_solution.txt  025_solution.txt  026_solution.txt  027_solution.txt  028_solution.txt  029_solution.txt  030_solution.txt  031_solution.txt  032_solution.txt  033_solution.txt  034_solution.txt  035_solution.txt  036_solution.txt  037_solution.txt  038_solution.txt  039_solution.txt  040_solution.txt  (+460 more)
hidoku-puzzle/include/: hidoku_solver.h
hidoku-puzzle/input/: 001_problem.txt  002_problem.txt  003_problem.txt  004_problem.txt  005_problem.txt  006_problem.txt  007_problem.txt  008_problem.txt  009_problem.txt  010_problem.txt  011_problem.txt  012_problem.txt  013_problem.txt  014_problem.txt  015_problem.txt  016_problem.txt  017_problem.txt  018_problem.txt  019_problem.txt  020_problem.txt  021_problem.txt  022_problem.txt  023_problem.txt  024_problem.txt  025_problem.txt  026_problem.txt  027_problem.txt  028_problem.txt  029_problem.txt  030_problem.txt  031_problem.txt  032_problem.txt  033_problem.txt  034_problem.txt  035_problem.txt  036_problem.txt  037_problem.txt  038_problem.txt  039_problem.txt  040_problem.txt  (+460 more)
hidoku-puzzle/src/: hidoku_solver.cpp  main.cpp
hidoku-puzzle/test/: test_hidoku_solver.cpp
peg-solitaire/: CMakeLists.txt  Makefile  README.md  peg_solitaire
peg-solitaire/include/: peg-solitaire.h
peg-solitaire/src/: main.cpp  peg-solitaire.cpp
quiz4/: CMakeLists.txt
quiz4/include/: maze_solver.h
quiz4/src/: main.cpp  maze_solver.cpp
quiz4/test/: test_maze_solver.cpp
quiz5/: CMakeLists.txt  expected.txt
quiz5/include/: sudoku_solver.h
quiz5/src/: full_quiz5_solution.cpp  main.cpp  sudoku_solver.cpp
quiz5/test/: test_sudoku_solver.cpp
quiz6/: CMakeLists.txt
quiz6/include/: min_max.h
quiz6/src/: full-quiz-solution.cpp  main.cpp  min_max.cpp
quiz6/test/: test_min_max.cpp
sdl2-example/: CMakeLists.txt
sdl2-example/src/: main.cpp
sfml-example/: CMakeLists.txt
sfml-example/src/: main.cpp
