cmake_minimum_required(VERSION 3.28)
project(APRG)

# Add subdirectories for the subprojects
add_subdirectory(extern/cxxopts)
add_subdirectory(collision-detection)
add_subdirectory(convex-hull)
add_subdirectory(sdl2-example)
add_subdirectory(sfml-example)
add_subdirectory(peg-solitaire)
add_subdirectory(quiz4)
add_subdirectory(quiz5)